--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     color: #233;
 }
 header {
-    background: #7c5c00;
+    background: #2e2200;
     color: white;
     padding: 30px;
     text-align: center;
